--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="title">Kavindu Amarasinghe</h1>
         <p class="section__text__p2">Fullstack Developer</p>
         <div class="btn-container">
-          <button class="btn btn-color-2" onclick="window.open('./assets/kavindu AmarsingheFinal.pdf')">Download CV</button>
+          <button class="btn btn-color-2" onclick="window.open('./assets/Kavindu Amarasinghe.pdf')">Download CV</button>
 
           <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
         </div>
